--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nursingofficerexams.com" />
     <!-- Placeholder image, would be replaced by actual brand asset -->
-    <meta property="og:image" content="https://img-wrapper.vercel.app/image?url=https://placehold.co/1200x630/4da3ff/ffffff?text=Nursing+Officer+Exams" />
+    <meta property="og:image" content="https://img-wrapper.vercel.app/image?url=https://img-wrapper.vercel.app/image?url=https://placehold.co/1200x630/4da3ff/ffffff?text=Nursing+Officer+Exams" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Nursing Officer Exams Portal Preview" />
@@ -23,7 +23,8 @@
     <meta name="twitter:title" content="Nursing Officer Exams India" />
     <meta name="twitter:description" content="Free resources, notifications, and syllabus for all Nursing Officer exams in India." />
     
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+    <!-- Updated Favicon to SVG Logo -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
