Improve SEO metadata and add robots/sitemap

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://nursingofficerexams.com/" />
+    <meta name="twitter:url" content="https://nursingofficerexams.com/" />
+    <meta property="og:site_name" content="NursingOfficerExams.com" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <!-- Updated Title and Meta for SEO Authority -->
     <title>Nursing Officer Exams India - Notifications, Syllabus, PYQs & Free Resources</title>
 
-    <meta name="description" content="The #1 Authority for Nursing Officer Exams in India. Get latest notifications, syllabus, free PYQs, mock tests, and lectures for AIIMS NORCET, RRB, ESIC, and State Staff Nurse exams." />
+    <meta name="description" content="The #1 authority for Nursing Officer exams in India. Get latest notifications, syllabus, free PYQs, mock tests, and lectures for AIIMS NORCET, RRB, ESIC, and state staff nurse exams." />
     <meta name="author" content="NursingOfficerExams.com" />
 
     <meta property="og:title" content="Nursing Officer Exams India - Notifications, Syllabus, PYQs & Free Resources" />
-    <meta property="og:description" content="The #1 Authority for Nursing Officer Exams in India. Get latest notifications, syllabus, free PYQs, mock tests, and lectures for AIIMS NORCET, RRB, ESIC, and State Staff Nurse exams." />
+    <meta property="og:description" content="The #1 authority for Nursing Officer exams in India. Get latest notifications, syllabus, free PYQs, mock tests, and lectures for AIIMS NORCET, RRB, ESIC, and state staff nurse exams." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://nursingofficerexams.com" />
+    <meta property="og:url" content="https://nursingofficerexams.com/" />
     <!-- Placeholder image, would be replaced by actual brand asset -->
     <meta property="og:image" content="https://img-wrapper.vercel.app/image?url=https://img-wrapper.vercel.app/image?url=https://placehold.co/1200x630/4da3ff/ffffff?text=Nursing+Officer+Exams" />
     <meta property="og:image:width" content="1200" />
@@ -20,11 +24,21 @@
     <meta property="og:image:alt" content="Nursing Officer Exams Portal Preview" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nursing Officer Exams India" />
-    <meta name="twitter:description" content="Free resources, notifications, and syllabus for all Nursing Officer exams in India." />
+    <meta name="twitter:title" content="Nursing Officer Exams India - Notifications, Syllabus, PYQs & Free Resources" />
+    <meta name="twitter:description" content="The #1 authority for Nursing Officer exams in India. Get latest notifications, syllabus, free PYQs, mock tests, and lectures for AIIMS NORCET, RRB, ESIC, and state staff nurse exams." />
     
     <!-- Updated Favicon to SVG Logo -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "NursingOfficerExams.com",
+  "url": "https://nursingofficerexams.com",
+  "description": "The #1 authority for Nursing Officer exams in India. Get latest notifications, syllabus, free PYQs, mock tests, and lectures for AIIMS NORCET, RRB, ESIC, and state staff nurse exams."
+}
+</script>
   </head>
   <body>
     <div id="root"></div>
